Fix statistics using wrong font family

--- a/directory_components/export_elements/sass/components/statistics/_base.scss
+++ b/directory_components/export_elements/sass/components/statistics/_base.scss
@@ -4,7 +4,7 @@
 .statistics-card-grid {
   .statistic-number {
     margin-bottom: 0.4em;
-    font-family: $brand-font-alternative;
+    font-family: $brand-font;
   }
 
   .statistic-heading {
